# vision

ThermalRegistration/: CMakeLists.txt
ThermalRegistration/includes/: example.hpp  util.hpp
ThermalRegistration/src/: boson_image.cpp  get_boson_image.cpp  register.cpp  software-device.cpp  test.cpp
openmv/: hand_gesture_rec.py
realsense/: CMakeLists.txt  README.md  plot_gamma.m
realsense/includes/: boson_image.h  util.hpp
realsense/src/: locate_device.cpp  test_shuttlecock.cpp
